Remove redundant dependency combatlogx, and setup for debugging.